crates/ruff_linter/src/rules/flake8_datetimez/snapshots/ruff_linter__rules__flake8_datetimez__tests__DTZ901_DTZ901.py.snap
---
source: crates/ruff_linter/src/rules/flake8_datetimez/mod.rs
---
DTZ901.py:5:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.max` without timezone information
  |
4 | # Error
5 | datetime.datetime.max
  | ^^^^^^^^^^^^^^^^^^^^^ DTZ901 (datetime-min-max)
6 | datetime.datetime.min
  |
  = help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901.py:6:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.min` without timezone information
  |
4 | # Error
5 | datetime.datetime.max
6 | datetime.datetime.min
  | ^^^^^^^^^^^^^^^^^^^^^ DTZ901 (datetime-min-max)
7 |
8 | datetime.datetime.max.replace(year=...)
  |
  = help: Replace with `datetime.datetime.min.replace(tzinfo=...)`

DTZ901.py:8:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.max` without timezone information
  |
6 | datetime.datetime.min
7 |
8 | datetime.datetime.max.replace(year=...)
  | ^^^^^^^^^^^^^^^^^^^^^ DTZ901 (datetime-min-max)
9 | datetime.datetime.min.replace(hour=...)
  |
  = help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901.py:9:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.min` without timezone information
  |
8 | datetime.datetime.max.replace(year=...)
9 | datetime.datetime.min.replace(hour=...)
  | ^^^^^^^^^^^^^^^^^^^^^ DTZ901 (datetime-min-max)
  |
  = help: Replace with `datetime.datetime.min.replace(tzinfo=...)`

DTZ901.py:27:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.max` without timezone information
   |
26 | # Error
27 | datetime.max
   | ^^^^^^^^^^^^ DTZ901 (datetime-min-max)
28 | datetime.min
   |
   = help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901.py:28:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.min` without timezone information
   |
26 | # Error
27 | datetime.max
28 | datetime.min
   | ^^^^^^^^^^^^ DTZ901 (datetime-min-max)
29 |
30 | datetime.max.replace(year=...)
   |
   = help: Replace with `datetime.datetime.min.replace(tzinfo=...)`

DTZ901.py:30:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.max` without timezone information
   |
28 | datetime.min
29 |
30 | datetime.max.replace(year=...)
   | ^^^^^^^^^^^^ DTZ901 (datetime-min-max)
31 | datetime.min.replace(hour=...)
   |
   = help: Replace with `datetime.datetime.max.replace(tzinfo=...)`

DTZ901.py:31:1: DTZ901 (datetime-min-max) Use of `datetime.datetime.min` without timezone information
   |
30 | datetime.max.replace(year=...)
31 | datetime.min.replace(hour=...)
   | ^^^^^^^^^^^^ DTZ901 (datetime-min-max)
   |
   = help: Replace with `datetime.datetime.min.replace(tzinfo=...)`
